added search location feature

--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -5,8 +5,10 @@ $color-primary-dark: rgb(6, 66, 177);
 $color-primary-night: #00213a;
 
 $color-light: #fff;
+
 $color-gray: #444343;
 $color-gray-light: #a7a6a6;
+$color-gray-very-light:#e5e5e5;
 $color-dark: #2a2a2a;
 $color-black-visible:rgba(0, 0, 0, 0.8);
 
