--- a/public/css/style.css
+++ b/public/css/style.css
@@ -980,6 +980,7 @@ footer {
       font-size: 1.2rem; } }
 
 .primary__heading {
+  margin: .5rem 0;
   font-size: 2.4rem;
   font-weight: 500; }
   @media only screen and (max-width: 75em) {
@@ -1032,6 +1033,61 @@ body {
     .app__home {
       width: auto;
       margin: 0 1rem; } }
+  .app__home__location {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem 0; }
+    .app__home__location--gps {
+      display: flex;
+      align-items: center;
+      margin: 2rem 0; }
+      .app__home__location--gps h1 {
+        font-size: 2rem; }
+      .app__home__location--gps svg {
+        margin-right: 1rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        fill: #108eea; }
+    .app__home__location--manual {
+      display: flex; }
+      .app__home__location--manual input {
+        height: 5rem;
+        width: 30rem;
+        border: none;
+        font-size: 1.7rem;
+        background: #e5e5e5;
+        height: 5rem;
+        padding-left: 1rem;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        border-radius: 2px;
+        outline: none; }
+        @media only screen and (max-width: 75em) {
+          .app__home__location--manual input {
+            height: 4rem;
+            width: 20rem;
+            font-size: 1.5rem; } }
+        @media only screen and (max-width: 37.5em) {
+          .app__home__location--manual input {
+            width: auto; } }
+      .app__home__location--manual button {
+        border-radius: 2px;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        outline: none;
+        border: none;
+        height: 5rem;
+        background-color: #e5e5e5;
+        margin-left: -2px;
+        cursor: pointer; }
+        @media only screen and (max-width: 75em) {
+          .app__home__location--manual button {
+            height: 4rem; } }
+        .app__home__location--manual button svg {
+          width: 2.5rem;
+          height: 2.5rem;
+          fill: #2a2a2a; }
   .app__home__quick-branch {
     margin: 2rem auto;
     display: flex;
@@ -1053,8 +1109,7 @@ body {
     @media only screen and (max-width: 56.25em) {
       .app__home__quick-branch {
         padding: 1rem 0rem;
-        border-bottom: 1px solid #444343;
-        border-top: 1px solid #444343; } }
+        border-bottom: 1px solid #a7a6a6; } }
     .app__home__quick-branch--name-box {
       height: 4rem; }
     .app__home__quick-branch a {
@@ -1076,7 +1131,6 @@ body {
         margin-top: .5rem;
         text-align: center; }
       .app__home__quick-branch a img {
-        z-index: 3;
         width: 9rem;
         height: 9rem;
         border-radius: 50%;
