--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/tab-header";
 @import "components/notification";
 @import "components/user-profile-card";
+@import "components/advertisment";
 
 @import "typography/typography";
 @import "base/base.scss";
