--- a/views/home.pug
+++ b/views/home.pug
@@ -3,6 +3,9 @@ extend base
 block content
     .main__container
         .app__home
+
+            h1.primary__heading Sponsers
+            include components/advertisment-card
             .app__home__location
                 .app__home__location--gps
                     svg
