pushing review card

--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -10,6 +10,7 @@ $color-gray: #444343;
 $color-gray-light: #a7a6a6;
 $color-gray-very-light:#e5e5e5;
 $color-dark: #2a2a2a;
+$color-black: #000000;
 $color-black-visible:rgba(0, 0, 0, 0.8);
 
 
