--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,7 +19,8 @@
 @import "components/user-profile-card";
 @import "components/profile-card";
 @import "components/advertisment";
-@import "components/_doctor-profile.scss";
+@import "components/doctor-profile.scss";
+@import "components/rating-card";
 
 @import "typography/typography";
 @import "base/base.scss";
