--- a/views/home.pug
+++ b/views/home.pug
@@ -24,7 +24,7 @@ block content
                     p.card__caption Ayurweda
                 a(href="/department/Dentist")
                     img(src="src/img/dentist.jpg", alt="Ayurwed department")
-                    p.card__caption Denstist
+                    p.card__caption Dentist
                 a(href="/department/Physician")
                     img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
                     p.card__caption Physician
