--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1008,7 +1008,16 @@ footer {
   border-bottom: 1px solid #a7a6a6; }
   .doctor__profile--bg {
     width: 100%;
-    height: 10rem; }
+    height: 28rem; }
+    @media only screen and (max-width: 75em) {
+      .doctor__profile--bg {
+        height: 25rem; } }
+    @media only screen and (max-width: 56.25em) {
+      .doctor__profile--bg {
+        height: 20rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .doctor__profile--bg {
+        height: 16rem; } }
     .doctor__profile--bg img {
       object-fit: cover;
       width: 100%;
@@ -1054,9 +1063,50 @@ footer {
     border: none;
     font-weight: 300;
     margin-left: 2rem;
-    background-color: #444343;
+    background-color: #000000;
     color: #fff;
     border-radius: 3px; }
+
+.rating__section {
+  border-bottom: 1px solid #a7a6a6;
+  margin: 1rem 0; }
+  .rating__section__overall {
+    display: flex; }
+    .rating__section__overall svg {
+      height: 1.8rem;
+      width: 1.8rem;
+      fill: #ffae00;
+      margin-left: 1rem; }
+
+.rating__card {
+  margin: 1rem 0;
+  padding: 1rem 0;
+  display: grid;
+  grid-template-columns: 4.5rem repeat(3, 1fr);
+  grid-template-rows: repeat(4, 0.5fr); }
+  .rating__card img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%; }
+  .rating__card--author-profile {
+    align-self: center;
+    grid-row: 1/3;
+    grid-column: 1/2; }
+  .rating__card--author {
+    grid-row: 1/2;
+    grid-column: 2/-1; }
+  .rating__card--rating-number {
+    display: flex;
+    grid-row: 2/3;
+    grid-column: 2/-1; }
+  .rating__card--rating-content {
+    grid-row: 3/-1;
+    grid-column: 1/-1; }
+  .rating__card svg {
+    height: 1.8rem;
+    width: 1.8rem;
+    fill: #ffae00;
+    margin-left: .5rem; }
 
 .regular__text {
   font-size: 1.5rem; }
@@ -1120,7 +1170,7 @@ p {
       font-size: 1.6rem; } }
   @media only screen and (max-width: 37.5em) {
     .card__heading {
-      font-size: 1.4rem; } }
+      font-size: 1.6rem; } }
 
 .card__caption {
   font-size: 1.6rem; }
@@ -1129,16 +1179,16 @@ p {
       font-size: 1.4rem; } }
   @media only screen and (max-width: 37.5em) {
     .card__caption {
-      font-size: 1.2rem; } }
+      font-size: 1.4rem; } }
 
 .card__paragraph {
   font-size: 1.4rem; }
   @media only screen and (max-width: 56.25em) {
     .card__paragraph {
-      font-size: 1.3rem; } }
+      font-size: 1.4rem; } }
   @media only screen and (max-width: 37.5em) {
     .card__paragraph {
-      font-size: 1.2rem; } }
+      font-size: 1.4rem; } }
 
 .feature__heading {
   font-size: 2rem; }
@@ -1158,8 +1208,8 @@ p {
 
 #verified {
   margin-left: 1rem;
-  height: 2rem;
-  width: 2rem;
+  height: 1.8rem;
+  width: 1.8rem;
   fill: #0b8d0b; }
 
 html {
