--- a/views/doctor-profile.pug
+++ b/views/doctor-profile.pug
@@ -11,7 +11,7 @@ block content
                             img(src="src/img/doctor-dp.jpg", alt="")
                         h3.card__heading Dr Vivek singh
                             svg#verified
-                                use(xlink:href="src/img/icon-pack-2.svg#check")
+                                use(xlink:href="src/img/icon-pack-2.svg#checked")
                         p.card__caption Dentist 
                         p.card__caption MBBS | MD , Apollo Hospitals
                 .appointment__section
@@ -24,7 +24,9 @@ block content
                         li.block__content Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ex!
                 .rating__section
                     h2.block__heading Reviews
-                    div
-                        h4.block__content overall 4.8
-                         
-                        include components/_rating-card
+                    //- h4.block__content.rating__section__overall overall 4.8
+                    //-     svg
+                    //-         use(xlink:href="src/img/icon-pack-2.svg#star")
+                    each val, index in ratingData
+                        +ratingCard(ratingData[index])
+                   
