--- a/sass/components/_doctor-profile.scss
+++ b/sass/components/_doctor-profile.scss
@@ -63,6 +63,7 @@
 
 .doctor__details {
     border-bottom: 1px solid $color-gray-light;
+    margin: 1rem;
 
     & ul {
         margin: 1rem 3rem;
