--- a/views/components/_header.pug
+++ b/views/components/_header.pug
@@ -52,6 +52,7 @@ header.navigation
             svg.navigation__link--item.navigation__link--user-icon
                 use(xlink:href="src/img/icon-pack-2.svg#menu-3")
 
+        //- <div class="alert__box alert__warning"><svg><use xlink:href="src/img/icon-pack-2.svg#danger"></use></svg><p class="alert__text">MESSAGE</p></div>
 
 
 
