--- a/views/components/advertisment-card.pug
+++ b/views/components/advertisment-card.pug
@@ -1,20 +1,16 @@
 .advertisment
-    .advertisment__container
-        .advertisment__container--card
-            a(href="#")
-                img(src="src/img/adv-card1.jpg", alt="amazon sponser")
-        .advertisment__container--card
-            a(href="#")
-                img(src="src/img/adv-card1.jpg", alt="amazon sponser")
-        .advertisment__container--card
-            a(href="#")
-                img(src="src/img/adv-card1.jpg", alt="amazon sponser")
-        .advertisment__container--card
-            a(href="#")
-                img(src="src/img/adv-card1.jpg", alt="amazon sponser")
-        .advertisment__container--card
-            a(href="#")
-                img(src="src/img/adv-card1.jpg", alt="amazon sponser")
-        .advertisment__container--card
-            a(href="#")
-                img(src="src/img/adv-card1.jpg", alt="amazon sponser")
+    .advertisment__container.swiper-container-sponser
+        .swiper-wrapper
+            //- .advertisment__container--card.swiper-slide
+            //-     a(href="#")
+            //-         img(src="src/img/adv-card-1.webp", alt="amazon sponser")
+            .advertisment__container--card.swiper-slide
+                a(href="#")
+                    img(src="src/img/adv-card-2.webp", alt="amazon sponser")
+            .advertisment__container--card.swiper-slide
+                a(href="#")
+                    img(src="src/img/adv-card-3.webp", alt="amazon sponser")
+            .advertisment__container--card.swiper-slide
+                a(href="#")
+                    img(src="src/img/adv-card-4.webp", alt="amazon sponser")
+            
