--- a/views/doctor-profile.pug
+++ b/views/doctor-profile.pug
@@ -5,23 +5,24 @@ block content
             .main__container
                 .doctor__profile
                     .doctor__profile--bg
-                        img(src="src/img/ayurwed.jpg", alt="")
+                        img(src="src/img/mirzapur.jpg", alt="")
                     .doctor__profile--card
                         .doctor__profile--card-dp
-                            img(src="src/img/doctor-dp.jpg", alt="")
-                        h3.card__heading Dr Vivek singh
+                            img(src="src/img/bablu.jpg", alt="")
+                        h3.card__heading Dr Bablu pandit
                             svg#verified
                                 use(xlink:href="src/img/icon-pack-2.svg#checked")
                         p.card__caption Dentist 
                         p.card__caption MBBS | MD , Apollo Hospitals
                 .appointment__section
-                    h2.regular__text Consultant Fee Rs. 600
+                    h2.card__caption Consultant Fee Rs. 599
                     button.button__text Book Now
-                .block__heading.doctor__details Details
-                    ul.block__caption 
-                        li.block__content Lorem ipsum dolor sit.
-                        li.block__content Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                        li.block__content Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ex!
+                .doctor__details 
+                    h1.block__heading Details
+                    ul
+                        li.block__caption Lorem ipsum dolor sit.
+                        li.block__caption Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        li.block__caption Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ex!
                 .rating__section
                     h2.block__heading Reviews
                     //- h4.block__content.rating__section__overall overall 4.8
