--- a/views/home.pug
+++ b/views/home.pug
@@ -18,97 +18,128 @@ block content
                             use(xlink:href="src/img/icon-pack-2.svg#search")
 
             h2.block__heading Top Specialities
-            .app__home__quick-branch
-                a(href="/department/Ayurweda")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-                a(href="/department/Dentist")
-                    img(src="src/img/dentist.jpg", alt="Ayurwed department")
-                    p.card__caption Dentist
-                a(href="/department/Physician")
-                    img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
-                    p.card__caption Physician
-                a(href="/department/Neurologist")
-                    img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                    p.card__caption Neurologist
-                a(href="/department/Child Doctor")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-                a(href="#")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-                a(href="#")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-                a(href="#")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-                a(href="#")
-                    img(src="src/img/dentist.jpg", alt="Ayurwed department")
-                    p.card__caption Denstist
-                a(href="#")
-                    img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
-                    p.card__caption Physician
-                a(href="#")
-                    img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
-                    p.card__caption Neurologist
-                a(href="#")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-                a(href="#")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-                a(href="#")
-                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
-                    p.card__caption Ayurweda
-
+            .app__home__quick-branch.swiper-container-1
+                .swiper-wrapper
+                    a.swiper-slide(href="/department/Ayurweda")
+                        img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                        p.card__caption Ayurweda
+                    a.swiper-slide(href="/department/Dentist")
+                        img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                        p.card__caption Dentist
+                    a.swiper-slide(href="/department/Physician")
+                        img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                        p.card__caption Physician
+                    a.swiper-slide(href="/department/Physician")
+                        img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                        p.card__caption Physician
+                    a.swiper-slide(href="/department/Physician")
+                        img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                        p.card__caption Physician
+                    a.swiper-slide(href="/department/Physician")
+                        img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                        p.card__caption Physician
+                    a.swiper-slide(href="/department/Physician")
+                        img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                        p.card__caption Physician
+                    a.swiper-slide(href="/department/Neurologist")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                    a.swiper-slide(href="/department/Child Doctor")
+                        img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                        p.card__caption Denstist
+                    a.swiper-slide(href="#")
+                        img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                        p.card__caption Physician
+                    a.swiper-slide(href="#")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                    a.swiper-slide(href="#")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                    a.swiper-slide(href="#")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                    a.swiper-slide(href="#")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                    a.swiper-slide(href="#")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                    a.swiper-slide(href="#")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                    a.swiper-slide(href="#")
+                        img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                        p.card__caption Neurologist
+                .swiper-button-prev-1
+                .swiper-button-next-1
+            
 
             h2.block__heading Top Doctors Near you
-            .app__home__quick-branch
-                a(href="/doctor/Dr soni yadav")
-                    img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                    p.card__caption.app__home__quick-branch--name-box Dr Soni yadav
-                a(href="/doctor/Dr Vivek singh")
-                    img(src="src/img/doctor2.jpg", alt="Ayurwed department")
-                    p.card__caption.app__home__quick-branch--name-box  Dr Vivek singh
-                a(href="/doctor/Dr Pankaj gupta")
-                    img(src="src/img/doctor3.jpg", alt="Ayurwed department")
-                    p.card__caption.app__home__quick-branch--name-box  Dr Pankaj gupta
-                a(href="/doctor/Dr Shaurabh maurya")
-                    img(src="src/img/doctor2.jpg", alt="Ayurwed department")
-                    p.card__caption.app__home__quick-branch--name-box  Dr Shaurab maurya
-                a(href="/doctor/Dr Sunita yadav")
-                    img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                    p.card__caption.app__home__quick-branch--name-box  Dr Sunita yadav
-
+            .app__home__quick-branch.swiper-container-2
+                .swiper-wrapper
+                    a.swiper-slide(href="/doctor/Dr soni yadav")
+                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box Soni yadav
+                    a.swiper-slide(href="/doctor/Dr Vivek singh")
+                        img(src="src/img/doctor2.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Vivek singh
+                    a.swiper-slide(href="/doctor/Dr Pankaj gupta")
+                        img(src="src/img/doctor3.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Pankaj gupta
+                    a.swiper-slide(href="/doctor/Dr Shaurabh maurya")
+                        img(src="src/img/doctor2.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Shaurab maurya
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                    a.swiper-slide(href="/doctor/Dr Sunita yadav")
+                        img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                        p.card__caption.app__home__quick-branch--name-box  Sunita yadav
+                .swiper-button-prev-2
+                .swiper-button-next-2
 
             h2.block__heading Top Hospitals Near you
-            .app__home__quick-branch
-                a(href="#")
-                    img(src="src/img/carsoul1.jpg", alt="Ayurwed department")
-                    p.card__caption Maruti Nandan
-                a(href="#")
-                    img(src="src/img/carsoul2.jpg", alt="Ayurwed department")
-                    p.card__caption Gokila Ben
-                a(href="#")
-                    img(src="src/img/carsoul3.jpg", alt="Ayurwed department")
-                    p.card__caption Apollo
-                a(href="#")
-                    img(src="src/img/carsoul4.jpg", alt="Ayurwed department")
-                    p.card__caption Lala lajpat Ray
+            .app__home__quick-branch.swiper-container-3
+                .swiper-wrapper
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul1.jpg", alt="Ayurwed department")
+                        p.card__caption Maruti Nandan
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul2.jpg", alt="Ayurwed department")
+                        p.card__caption Gokila Ben
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul3.jpg", alt="Ayurwed department")
+                        p.card__caption Apollo
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul4.jpg", alt="Ayurwed department")
+                        p.card__caption Lala lajpat Ray
+                .swiper-button-prev-3
+                .swiper-button-next-3
 
             h2.block__heading Medical clinics Near you
-            .app__home__quick-branch
-                a(href="#")
-                    img(src="src/img/carsoul1.jpg", alt="Ayurwed department")
-                    p.card__caption Maruti Nandan
-                a(href="#")
-                    img(src="src/img/carsoul2.jpg", alt="Ayurwed department")
-                    p.card__caption Gokila Ben
-                a(href="#")
-                    img(src="src/img/carsoul3.jpg", alt="Ayurwed department")
-                    p.card__caption Apollo
-                a(href="#")
-                    img(src="src/img/carsoul4.jpg", alt="Ayurwed department")
-                    p.card__caption Lala lajpat Ray
-                
+            .app__home__quick-branch.swiper-container-4
+                .swiper-wrapper
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul1.jpg", alt="Ayurwed department")
+                        p.card__caption Maruti Nandan
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul2.jpg", alt="Ayurwed department")
+                        p.card__caption Gokila Ben
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul3.jpg", alt="Ayurwed department")
+                        p.card__caption Apollo
+                    a.swiper-slide(href="#")
+                        img(src="src/img/carsoul4.jpg", alt="Ayurwed department")
+                        p.card__caption Lala lajpat Ray
+                .swiper-button-prev-4
+                .swiper-button-next-4
