--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,8 +28,25 @@ ORDER: Base + typography > general layout + grid > page layout > components
     display: none; } }
 
 .swiper-container {
-  width: 600px;
-  height: 300px; }
+  width: auto;
+  height: auto; }
+
+.swiper-container-sponser {
+  width: 100%;
+  height: 100%; }
+  .swiper-container-sponser.swiper-wrapper {
+    padding-left: 0; }
+  .swiper-container-sponser .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+@media only screen and (max-width: 37.5em) {
+  .swiper-button-prev-1,
+  .swiper-button-next-1,
+  .swiper-button-prev-2,
+  .swiper-button-next-2 {
+    display: none; } }
 
 footer {
   position: static;
@@ -926,7 +943,6 @@ footer {
   padding: 1.5rem;
   display: grid;
   grid-template-columns: max-content repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
   align-items: center; }
   @media only screen and (max-width: 75em) {
     .people__card {
@@ -936,10 +952,11 @@ footer {
       margin: 1rem auto;
       width: 96%; } }
   .people__card-dp {
-    margin-right: 1rem;
-    grid-row: 1/-1;
+    margin: 0rem 1rem 0 0;
+    grid-row: 1/4;
     grid-column: 1/2;
     position: relative;
+    align-self: start;
     width: max-content; }
     .people__card-dp img {
       height: 8rem;
@@ -960,7 +977,7 @@ footer {
       text-align: center;
       border-radius: .3rem;
       position: absolute;
-      bottom: .2rem;
+      bottom: 0rem;
       width: 4rem;
       right: 0;
       left: 0;
@@ -971,6 +988,7 @@ footer {
       margin-left: auto; }
   .people__card h3 {
     display: flex;
+    align-items: center;
     grid-column: 2/5;
     grid-row: 1/2; }
   .people__card p {
@@ -983,25 +1001,15 @@ footer {
     justify-self: end;
     grid-area: 3/2/4/5; }
 
-.advertisment {
-  margin: 1.5rem 0; }
-  .advertisment__container {
+.advertisment__container {
+  overflow-x: hidden; }
+  .advertisment__container--card a {
     display: flex;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
-    flex-grow: 0;
-    flex-shrink: 0;
-    overflow-x: auto; }
-    .advertisment__container--card {
-      margin: 0 1.5rem; }
-      .advertisment__container--card:first-child {
-        margin: 0;
-        margin-right: 1.5rem; }
-      .advertisment__container--card a {
-        display: flex;
-        text-decoration: none; }
-        .advertisment__container--card a img {
-          border-radius: 3px; }
+    text-decoration: none; }
+    .advertisment__container--card a img {
+      width: 100%;
+      height: 100%;
+      border-radius: 3px; }
 
 .doctor__profile {
   position: relative;
@@ -1044,7 +1052,8 @@ footer {
         margin: 2rem auto; }
 
 .doctor__details {
-  border-bottom: 1px solid #a7a6a6; }
+  border-bottom: 1px solid #a7a6a6;
+  margin: 1rem; }
   .doctor__details ul {
     margin: 1rem 3rem; }
     .doctor__details ul li {
@@ -1069,7 +1078,7 @@ footer {
 
 .rating__section {
   border-bottom: 1px solid #a7a6a6;
-  margin: 1rem 0; }
+  margin: 1rem; }
   .rating__section__overall {
     display: flex; }
     .rating__section__overall svg {
@@ -1082,11 +1091,11 @@ footer {
   margin: 1rem 0;
   padding: 1rem 0;
   display: grid;
-  grid-template-columns: 4.5rem repeat(3, 1fr);
-  grid-template-rows: repeat(4, 0.5fr); }
+  grid-template-columns: 6rem repeat(3, 1fr);
+  grid-template-rows: repeat(4, 0.6fr); }
   .rating__card img {
-    width: 4rem;
-    height: 4rem;
+    width: 5rem;
+    height: 5rem;
     border-radius: 50%; }
   .rating__card--author-profile {
     align-self: center;
@@ -1097,6 +1106,7 @@ footer {
     grid-column: 2/-1; }
   .rating__card--rating-number {
     display: flex;
+    align-items: center;
     grid-row: 2/3;
     grid-column: 2/-1; }
   .rating__card--rating-content {
@@ -1115,7 +1125,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-weight: 400; }
+  font-weight: 600; }
 
 p {
   font-weight: 300; }
@@ -1129,66 +1139,67 @@ p {
 
 .section__heading {
   font-size: 3.5rem; }
+  @media only screen and (max-width: 75em) {
+    .section__heading {
+      font-size: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .section__heading {
+      font-size: 2.6rem; } }
 
 .section__paragraph {
-  font-weight: 300;
-  color: #a7a6a6;
+  font-size: 2.2rem; }
+  @media only screen and (max-width: 75em) {
+    .section__paragraph {
+      font-size: 2rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .section__paragraph {
+      font-size: 1.8rem; } }
+
+.alert__text {
+  font-weight: 600;
   font-size: 1.8rem; }
 
 .block__heading {
   margin: .3rem 0;
-  font-size: 3.3rem; }
+  font-size: 2.4rem; }
   @media only screen and (max-width: 75em) {
     .block__heading {
-      font-size: 2.4rem; } }
-  @media only screen and (max-width: 56.25em) {
-    .block__heading {
-      font-size: 2.3rem; } }
+      font-size: 2.2rem; } }
   @media only screen and (max-width: 37.5em) {
     .block__heading {
       font-size: 2rem; } }
 
 .block__caption {
-  font-size: 1.8rem; }
+  margin: .3rem 0;
+  font-size: 2rem;
+  color: #494747; }
   @media only screen and (max-width: 75em) {
     .block__caption {
-      font-size: 1.6rem; } }
-  @media only screen and (max-width: 56.25em) {
-    .block__caption {
-      font-size: 1.4rem; } }
+      font-size: 1.9rem; } }
   @media only screen and (max-width: 37.5em) {
     .block__caption {
-      font-size: 1.2rem; } }
+      font-size: 1.7rem; } }
 
 .block__content {
-  font-size: 1.6rem; }
+  margin: 1rem 0;
+  font-size: 1.8rem; }
 
 .card__heading {
-  font-size: 1.8rem; }
-  @media only screen and (max-width: 56.25em) {
-    .card__heading {
-      font-size: 1.6rem; } }
+  font-size: 2.3rem;
+  font-weight: 400; }
   @media only screen and (max-width: 37.5em) {
     .card__heading {
-      font-size: 1.6rem; } }
+      font-size: 2rem; } }
 
 .card__caption {
-  font-size: 1.6rem; }
-  @media only screen and (max-width: 56.25em) {
-    .card__caption {
-      font-size: 1.4rem; } }
+  font-size: 2rem;
+  font-weight: 400; }
   @media only screen and (max-width: 37.5em) {
     .card__caption {
-      font-size: 1.4rem; } }
+      font-size: 1.8rem; } }
 
 .card__paragraph {
-  font-size: 1.4rem; }
-  @media only screen and (max-width: 56.25em) {
-    .card__paragraph {
-      font-size: 1.4rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .card__paragraph {
-      font-size: 1.4rem; } }
+  font-size: 1.8rem; }
 
 .feature__heading {
   font-size: 2rem; }
@@ -1301,13 +1312,7 @@ body {
           fill: #2a2a2a; }
   .app__home__quick-branch {
     margin: 2rem auto;
-    display: flex;
-    justify-content: center;
-    justify-content: flex-start;
-    overflow-x: scroll;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-    flex-grow: 0; }
+    overflow-x: hidden; }
     .app__home__quick-branch--placeholder {
       width: 4rem;
       height: 4rem;
@@ -1323,7 +1328,8 @@ body {
         border-bottom: 1px solid #a7a6a6; } }
     .app__home__quick-branch--name-box {
       height: 4rem; }
-    .app__home__quick-branch a {
+    .app__home__quick-branch .swiper-wrapper a {
+      width: 12.5rem;
       position: relative;
       padding: 0 2rem;
       margin-right: .5rem;
@@ -1333,20 +1339,20 @@ body {
       justify-content: center;
       align-items: center; }
       @media only screen and (max-width: 56.25em) {
-        .app__home__quick-branch a {
+        .app__home__quick-branch .swiper-wrapper a {
           padding: 0 1rem; }
-          .app__home__quick-branch a:first-child {
+          .app__home__quick-branch .swiper-wrapper a:first-child {
             padding: 0; } }
-      .app__home__quick-branch a p {
+      .app__home__quick-branch .swiper-wrapper a p {
         color: #108eea;
         margin-top: .5rem;
         text-align: center; }
-      .app__home__quick-branch a img {
+      .app__home__quick-branch .swiper-wrapper a img {
         width: 9rem;
         height: 9rem;
         border-radius: 50%;
         object-fit: cover; }
         @media only screen and (max-width: 56.25em) {
-          .app__home__quick-branch a img {
+          .app__home__quick-branch .swiper-wrapper a img {
             width: 7rem;
             height: 7rem; } }
