--- a/sass/components/_advertisment.scss
+++ b/sass/components/_advertisment.scss
@@ -1,28 +1,18 @@
 .advertisment {
-    margin: 1.5rem 0;
 
     &__container {
 
-        display: flex;
-        justify-content: flex-start;
-        flex-wrap: nowrap;
-        flex-grow: 0;
-        flex-shrink: 0;
-        overflow-x: auto;
+        overflow-x: hidden;
 
         &--card {
-            margin: 0 1.5rem;
-
-            &:first-child {
-                margin: 0;
-                margin-right: 1.5rem;
-            }
 
             & a {
                 display: flex;
                 text-decoration: none;
 
                 & img {
+                    width: 100%;
+                    height: 100%;
                     border-radius: 3px;
                 }
             }
