--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -116,7 +116,7 @@ h1,
 h2,
 h3,
 h4 {
-    font-weight: 400;
+    font-weight: 600;
 }
 
 p {
@@ -140,32 +140,51 @@ p {
         //h1
         font-size: 3.5rem;
 
+        @include respond(tab-land) {
+            font-size: 3rem;
+        }
+
+        @include respond(phone) {
+            font-size: 2.6rem;
+        }
+
     }
 
     &__paragraph {
         //p
-        font-weight: 300;
-        color: $color-gray-light;
-        font-size: 1.8rem;
+        // font-weight: 300;
+        // color: $color-gray-light;
+        font-size: 2.2rem;
+
+        @include respond(tab-land) {
+            font-size: 2rem;
+        }
+
+        @include respond(phone) {
+            font-size: 1.8rem;
+        }
     }
+}
+
+.alert__text {
+    font-weight: 600;
+    font-size: 1.8rem;
 }
 
 .block {
 
-
-
     &__heading {
         //h2
         margin: .3rem 0;
-        font-size: 3.3rem;
+        font-size: 2.4rem;
 
         @include respond(tab-land) {
-            font-size: 2.4rem;
+            font-size: 2.2rem;
         }
 
-        @include respond(tab-port) {
-            font-size: 2.3rem;
-        }
+        // @include respond(tab-port) {
+        //     font-size: 2.3rem;
+        // }
 
         @include respond(phone) {
             font-size: 2rem;
@@ -174,66 +193,71 @@ p {
 
     &__caption {
         //h4
-        font-size: 1.8rem;
+        margin: .3rem 0;
+        font-size: 2rem;
+        color: #494747;
 
         @include respond(tab-land) {
-            font-size: 1.6rem;
+            font-size: 1.9rem;
         }
 
-        @include respond(tab-port) {
-            font-size: 1.4rem;
-        }
+        // @include respond(tab-port) {
+        //     font-size: 1.4rem;
+        // }
 
         @include respond(phone) {
-            font-size: 1.2rem;
+            font-size: 1.7rem;
         }
     }
 
     &__content {
         //p
-        font-size: 1.6rem;
+        margin: 1rem 0;
+        font-size: 1.8rem;
+
+        @include respond(phone) {}
     }
 }
 
 .card {
     &__heading {
         //h5
-        font-size: 1.8rem;
+        font-size: 2.3rem;
+        font-weight: 400;
 
-
-        @include respond(tab-port) {
-            font-size: 1.6rem;
-        }
+        // @include respond(tab-port) {
+        //     font-size: 1.6rem;
+        // }
 
         @include respond(phone) {
-            font-size: 1.6rem;
+            font-size: 2rem;
         }
     }
 
     &__caption {
         //h5
-        font-size: 1.6rem;
-
-        @include respond(tab-port) {
-            font-size: 1.4rem;
-        }
+        font-size: 2rem;
+        font-weight: 400;
+        // @include respond(tab-port) {
+        //     font-size: 1.4rem;
+        // }
 
         @include respond(phone) {
-            font-size: 1.4rem;
+            font-size: 1.8rem;
         }
     }
 
     &__paragraph {
         //p
-        font-size: 1.4rem;
+        font-size: 1.8rem;
 
-        @include respond(tab-port) {
-            font-size: 1.4rem;
-        }
+        // @include respond(tab-port) {
+        //     font-size: 1.4rem;
+        // }
 
-        @include respond(phone) {
-            font-size: 1.4rem;
-        }
+        // @include respond(phone) {
+        //     font-size: 1.4rem;
+        // }
     }
 }
 
