--- a/views/base.pug
+++ b/views/base.pug
@@ -5,6 +5,8 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="shortcut icon", href="src/img/logo-primary.jpg", type="image/x-icon")
         link(rel="stylesheet", href="css/style.css")
+        link(rel="stylesheet", href="https://unpkg.com/swiper/swiper-bundle.css")
+        link(rel="stylesheet", href="https://unpkg.com/swiper/swiper-bundle.min.css")
         script(defer src="src/js/bundle.js")
         script(defer scr="src/js/swiper.js")
         
