--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -17,7 +17,7 @@ mixin peopleCard(doctorData)
         h3.card__heading= doctorData.name
             svg#verified
                 use(xlink:href="src/img/icon-pack-2.svg#checked")
-        p.card__caption= doctorData.description
+        p.card__paragraph= doctorData.description
         -var experience = `${doctorData.experience} yr experience`;
         span.card__paragraph.people__card--info-experience= experience
         span.card__paragraph.people__card--info-department= doctorData.department
